# Lab-2

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  full_logs.txt  main.py  pyproject.toml  requirements.txt  test_api.py  test_debug.py
app/core/: auth.py  config_manager.py
app/core/db/: db_manager.py  db_model.py  db_schema.py
app/utils/: initDB.py
gui/: app.js  index.html  styles.css
price_predictor/: inference.py  train.py
