[project]
name = "boilerplatepython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pymongo>=4.16.0",
    "pymysql>=1.1.2",
    "python-jose[cryptography]>=3.5.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "tensorflow>=2.20.0",
]
